 $Id: ChangeLog,v 1.131.2.25.2.59 2010/06/24 02:54:12 uehira Exp $

2010-06-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c : Shm_init() : set max. remain size of shared memory.
	* Version 2.1.5 released.

2010-06-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use str2double() from library : win.c, elist.c
	  hypomhc : rename str2double() --> str2double_h()
	* src/win.c : 64bit clean?
	* Version 2.1.4 released.

2010-06-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : WIN_sr : uint32_w --> int32_w
	* src/winlib.h : added structure for binary hypo file : 'struct FinalB'
	  delete declaration in final2finalb.c, finalb2final.c,	finalb2seis.c,
	  pick2finalb.c, win.c.
	* src/win.c : use hypot().
	* Version 2.1.3 released.

2010-06-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/ulaw.[ch] : cvt.[ch] renamed.
	* src/win.c : ulaw() moved to 'ulaw.c'. use win2fix().

2010-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : fixed buffer overrun bug.

2010-06-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : bug fixed [in get_trigch()]. (MFH)
	  malloc return check : 0 --> NULL.

2010-06-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/relay.c : bug fixed.
	* Version 2.1.2 released.

2010-04-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/relay.c : bug fixed.
	* Version 2.1.1 released.

2010-04-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use pltxy() from library : hypomhc, select_bylatlon, select_stations
	* src/dewin.c : 64 bit clean?
	* src/hypomhc.c : K&R --> ANIS C
	* src/win.c : supress warnings.
	* Version 2.1.0 released.

2010-04-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : added option '--disable-fortran'.
	* compatible with automake-1.10.
	* mkinstalldirs : you can remove, if you use automake-1.10.
	* Version 2.0.12 released.

2010-04-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use libtool (ver.2.2.6b) for shared library.
	* Version 2.0.11 released.
